# spotify-gtk

./: CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
src/: format.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  progress.cpp  progress.hpp  titlebar.cpp  titlebar.hpp
src/dialog/: aboutdialog.cpp  aboutdialog.hpp
src/list/: leftsidepanel.cpp  leftsidepanel.hpp  libraryitem.cpp  libraryitem.hpp  playlistitem.cpp  playlistitem.hpp
src/menu/: devicemenu.cpp  devicemenu.hpp  mainmenu.cpp  mainmenu.hpp
src/settingsdialog/: aboutpage.cpp  aboutpage.hpp  applicationpage.cpp  applicationpage.hpp  interfacepage.cpp  interfacepage.hpp  playlistspage.cpp  playlistspage.hpp  settingscategory.cpp  settingscategory.hpp  settingsdialog.cpp  settingsdialog.hpp  settingsitem.cpp  settingsitem.hpp  settingspage.cpp  settingspage.hpp  settingssetting.cpp  settingssetting.hpp  spotifypage.cpp  spotifypage.hpp
src/trackslist/: trackslist.cpp  trackslist.hpp  trackslistmodel.cpp  trackslistmodel.hpp
